[FIX] Subsrcibe button align center

--- a/front/src/app/pages/topics/topics.component.scss
+++ b/front/src/app/pages/topics/topics.component.scss
@@ -18,6 +18,6 @@
     border-width: 0px;
 }
 
-.topicList > .mat-mdc-card-actions {
+.topicList .mat-mdc-card-actions {
     justify-content: center;
 }
